--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "editorconfig": "editorconfig-cli",
-    "stylelint": "stylelint 'source/sass/**/*.scss' --syntax scss",
+    "stylelint": "stylelint 'source/сss/**/*.css' --syntax css",
     "test": "npm run editorconfig && npm run stylelint",
     "build": "gulp html && gulp style",
     "start": "npm run build && gulp"
@@ -24,16 +24,16 @@
     "autoprefixer": "^7.2.1",
     "browser-sync": "^2.18.8",
     "del": "^3.0.0",
-    "gulp-load-plugins": "^1.5.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
-    "gulp-csso": "^3.0.0",
+    "gulp-csso": "^3.0.1",
     "gulp-imagemin": "^4.0.0",
     "gulp-jslint": "^1.0.10",
+    "gulp-load-plugins": "^1.5.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^7.0.0",
     "gulp-posthtml": "^3.0.2",
     "gulp-rename": "^1.2.2",
-    "gulp-plumber": "^1.1.0",
     "gulp-uglify": "^3.0.0",
     "postcss-import": "^11.0.0",
     "postcss-url": "^7.3.0",
@@ -51,7 +51,7 @@
     "*.js",
     "source/js/**/*.js",
     "source/img/**/*.svg",
-    "source/css/**/*.scss"
+    "source/css/**/*.css"
   ],
   "engines": {
     "node": "8.2"
